<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvAudioStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filenotselected"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnPickAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectfilefromphone" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnPlay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/btnPause"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/pause"
            android:textColor="#DD2C00"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnStop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textColor="#DD2C00"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF5722"
        android:text="@string/backtomenu"
        android:textColor="#212121"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>